fix: more margin on mobile delete button

--- a/static-client/css/components.css
+++ b/static-client/css/components.css
@@ -459,7 +459,8 @@ a { color: #006bb7; }
   /* Bigger trash/leave icon on mobile */
   .settings-end .bi-trash-fill {
     scale: 2 !important;
-    margin-top: 14px !important;
+    margin-top: 20px !important;
+    margin-right: 8px !important;
   }
 }
 
